@@ -90,6 +90,15 @@ location: https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/letsee-proj
 retrieve-method: svn
 bootstrap: bootstrap.sh
 
+[isl]
+category: math
+module: isl
+location: git://repo.or.cz/isl.git
+retrieve-method: git
+bootstrap: autogen.sh
+configure: --with-gmp-prefix=$poccsrcdir/math/external/install --with-gmp-exec-prefix=$poccsrcdir/math/external/install
+
+
 ## Generators
 [cloog]
 category: generators
@@ -163,3 +172,12 @@ retrieve-method: svn
 bootstrap: bootstrap.sh
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools --with-polylib=$poccsrcdir/math/install-polylib
 make-depends: scoplib cloog candl piplib scoptools clasttools polylib
+
+[dlml]
+category: optimizers
+module: dlml
+location: https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/dlml/trunk
+retrieve-method: svn
+bootstrap: bootstrap.sh
+configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-polylib=$poccsrcdir/math/install-polylib
+make-depends: scoplib cloog candl piplib polylib
