@@ -14,7 +14,7 @@
 configuration: base
 # Specify the software to use. Software name must match an entry in
 # configure.cfg.
-software-versions: scoplib fm piplib clan candl letsee polylib cloog pluto polyfeat pragmatize vectorizer scoptools clasttools storcompacter clastannotation
+software-versions: scoplib fm piplib clan candl letsee polylib cloog pluto polyfeat pragmatize vectorizer scoptools clasttools storcompacter clastannotation dlml isl
 
 # The rest of the file is not used for the moment.
 pass-thru: clan candl cloog
