@@ -105,8 +105,17 @@ category: math
 module: isl
 location: git://repo.or.cz/isl.git
 retrieve-method: git
-configure: --without-piplib --without-polylib --with-gmp-prefix=$poccsrcdir/math/external/install
 bootstrap: autogen.sh
+configure: --with-gmp-prefix=$poccsrcdir/math/external/install --with-gmp-exec-prefix=$poccsrcdir/math/external/install
+
+[barvinok]
+category: math
+module: barvinok
+location: git://repo.or.cz/barvinok.git
+retrieve-method: git
+bootstrap: autogen.sh
+configure: --with-gmp-prefix=$poccsrcdir/math/external/install --with-gmp-exec-prefix=$poccsrcdir/math/external/install
+
 
 ## Generators
 [cloog]
@@ -163,6 +172,17 @@ bootstrap: bootstrap.sh
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools
 make-depends: scoplib cloog candl piplib scoptools clasttools
 
+
+[parametrictiling]
+category: generators
+module: parametrictiling
+location: https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/parametrictiling/trunk
+retrieve-method: svn
+bootstrap: bootstrap.sh
+configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools
+make-depends: scoplib cloog candl piplib scoptools clasttools
+
+
 ## Optimizers
 [letsee]
 category: optimizers
@@ -199,3 +219,12 @@ retrieve-method: svn
 bootstrap: bootstrap.sh
 configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-scoptools=$poccsrcdir/ir/install-scoptools --with-clasttools=$poccsrcdir/generators/install-clasttools --with-polylib=$poccsrcdir/math/install-polylib
 make-depends: scoplib cloog candl piplib scoptools clasttools polylib
+
+[dlml]
+category: optimizers
+module: dlml
+location: https://alchemy.futurs.inria.fr/svn/users/pouchet/projects/dlml/trunk
+retrieve-method: svn
+bootstrap: bootstrap.sh
+configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdir/generators/install-cloog --with-gmp-prefix=$poccsrcdir/math/external/install --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib --with-polylib=$poccsrcdir/math/install-polylib
+make-depends: scoplib cloog candl piplib polylib
