@@ -15,7 +15,7 @@
 configuration: devel
 # Specify the software versions to use. Software name must match an
 # entry in configure.cfg.
-software-versions: scoplib polylib fm piplib clan candl letsee pluto cloog polyfeat pragmatize vectorizer scoptools clasttools storcompacter clastannotation
+software-versions: scoplib polylib fm piplib clan candl letsee pluto cloog polyfeat pragmatize vectorizer scoptools clasttools storcompacter clastannotation dlml parametrictiling
 
 # The rest of the file is not used for the moment.
 pass-thru: clan candl cloog
