@@ -40,6 +40,7 @@ INCLUDES		=						\
 	-I$(install_prefix)/optimizers/install-pluto/include		\
 	-I$(install_prefix)/optimizers/install-storcompacter/include	\
 	-I$(install_prefix)/optimizers/install-vectorizer/include	\
+	-I$(install_prefix)/optimizers/install-dlml/include		\
 	-I$(install_prefix)/ir/install-scoplib/include			\
 	-I$(install_prefix)/ir/install-scoptools/include		\
 	-I$(install_prefix)/analyzers/install-clan/include		\
@@ -96,6 +97,7 @@ libpocc_la_LIBADD	=						     \
   $(install_prefix)/optimizers/install-letsee/lib/libletsee.la		     \
   $(install_prefix)/optimizers/install-pluto/lib/libpluto.la		     \
   $(install_prefix)/optimizers/install-storcompacter/lib/libstorcompacter.la \
+  $(install_prefix)/optimizers/install-dlml/lib/libdlml.la	             \
   $(install_prefix)/optimizers/install-vectorizer/lib/libvectorizer.la	     \
   $(install_prefix)/generators/install-cloog/lib/libcloog-isl.la	     \
   $(install_prefix)/generators/install-pragmatize/lib/libpragmatize.la	     \
